--- a/src/App.css
+++ b/src/App.css
@@ -14,16 +14,22 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #218838;
+
   display: flex;
-  flex-direction: column;
+
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
+  color: white;
+  padding: 5px;
+  border-bottom: 2px solid #ddd;
+}
+.logo {
+  width: 80px;
+  height: auto;
+  margin-right: 10px;
+}
 .App-link {
   color: #61dafb;
 }
